--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,11 @@ coverage
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
+build
 
 # Dependency directories
 node_modules
+bower_components
 jspm_packages
 
 # Optional npm cache directory
@@ -35,3 +37,4 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+.idea/
