--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.4",
     "paper-tabs": "PolymerElements/paper-tabs#^1.7.0",
     "polymer": "polymer/polymer#^1.7.1",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.23"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.23",
+    "neon-animation": "PolymerElements/neon-animation#^1.2.4"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.1.8",
