--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,14 @@
     "paper-tabs": "PolymerElements/paper-tabs#^1.7.0",
     "polymer": "polymer/polymer#^1.7.1",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.23",
-    "neon-animation": "PolymerElements/neon-animation#^1.2.4"
+    "neon-animation": "PolymerElements/neon-animation#^1.2.4",
+    "iron-swipeable-container": "PolymerElements/iron-swipeable-container#^1.0.3",
+    "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
+    "paper-item": "PolymerElements/paper-item#^1.2.1",
+    "paper-ripple": "PolymerElements/paper-ripple#^1.0.10",
+    "paper-rating": "^1.1.1",
+    "lodash-element": "^1.0.2",
+    "paper-badge": "PolymerElements/paper-badge#^1.1.4"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.1.8",
